-- V1: Initial schema for Web-Resolver-Task
-- Tables: test (problem catalog), test_resolve (test cases / contract), task_results, ai_analysis, users.
-- submissions table is added in V2 to keep migration history aligned with development plan.

CREATE EXTENSION IF NOT EXISTS pgcrypto;

-- Problem catalog (matches JPA entity ru.db.entity.Test, table name "test")
CREATE TABLE IF NOT EXISTS test (
    id          BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    test_id     UUID,
    title       VARCHAR(255),
    description VARCHAR(255),
    difficulty  VARCHAR(255) CHECK (difficulty IN ('Easy', 'Medium', 'Hard'))
);

CREATE INDEX IF NOT EXISTS idx_test_test_id ON test(test_id);

-- Test cases / signature contract per problem (ru.db.entity.TestResolve)
CREATE TABLE IF NOT EXISTS test_resolve (
    id          BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    arguments   JSONB,
    return_type VARCHAR(255) CHECK (return_type IN ('String', 'Integer', 'ArrayString', 'ArrayInteger', 'Boolean')),
    tests       JSONB,
    problem_id  UUID
);

CREATE INDEX IF NOT EXISTS idx_test_resolve_problem_id ON test_resolve(problem_id);

-- AI analysis output (created together with task_results to support ManyToOne FK from task_results)
CREATE TABLE IF NOT EXISTS ai_analysis (
    id                  BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    task_result_id      BIGINT NOT NULL,
    code_quality_score  INTEGER,
    issues              JSONB,
    recommendations     JSONB,
    explanation         TEXT,
    complexity          VARCHAR(255) CHECK (complexity IN ('LOW', 'MEDIUM', 'HIGH', 'VERY_HIGH')),
    created_at          TIMESTAMP(6) WITH TIME ZONE NOT NULL,
    model_version       VARCHAR(255),
    CONSTRAINT uq_ai_analysis_task_result_id UNIQUE (task_result_id)
);

-- Task execution result (referenced from frontend results page)
CREATE TABLE IF NOT EXISTS task_results (
    id                       BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    task_id                  UUID NOT NULL,
    test_id                  UUID NOT NULL,
    user_id                  UUID,
    status                   VARCHAR(255) NOT NULL CHECK (status IN ('SUCCESS', 'PARTIAL_SUCCESS', 'FAILED', 'ERROR')),
    total_tests              INTEGER,
    passed_tests             INTEGER,
    total_execution_time_ms  BIGINT,
    memory_used_kb           BIGINT,
    code                     TEXT,
    language                 VARCHAR(255) NOT NULL,
    test_results             JSONB,
    scenario_results         JSONB,
    ai_analysis_id           BIGINT,
    created_at               TIMESTAMP(6) WITH TIME ZONE NOT NULL,
    updated_at               TIMESTAMP(6) WITH TIME ZONE,
    CONSTRAINT fk_task_results_ai_analysis FOREIGN KEY (ai_analysis_id) REFERENCES ai_analysis(id)
);

CREATE INDEX IF NOT EXISTS idx_task_results_task_id ON task_results(task_id);
CREATE INDEX IF NOT EXISTS idx_task_results_user_id ON task_results(user_id);

-- User accounts for Phase 4 (JWT + Spring Security). Added here so that V3 seed runs against a stable schema.
CREATE TABLE IF NOT EXISTS users (
    id            UUID PRIMARY KEY DEFAULT gen_random_uuid(),
    email         VARCHAR(255) NOT NULL UNIQUE,
    password_hash VARCHAR(255) NOT NULL,
    role          VARCHAR(50)  NOT NULL CHECK (role IN ('STUDENT', 'TEACHER')),
    created_at    TIMESTAMP(6) WITH TIME ZONE NOT NULL DEFAULT NOW()
);

CREATE INDEX IF NOT EXISTS idx_users_email ON users(email);
