erDiagram
    USERS ||--o{ SUBMISSIONS : "отправляет"
    USERS ||--o{ TASK_RESULTS : "владеет"
    TEST ||--|| TEST_RESOLVE : "описывает контракт"
    TEST ||--o{ SUBMISSIONS : "решается"
    SUBMISSIONS ||--|| TASK_RESULTS : "формирует"
    TASK_RESULTS ||--o| AI_ANALYSIS : "имеет разбор"

    USERS {
        UUID id PK
        string email UK
        string username
        string password_hash
        string role "STUDENT or TEACHER"
        timestamp created_at
    }
    TEST {
        bigint id PK
        UUID test_id UK
        string title
        text description
        string difficulty
        string category
    }
    TEST_RESOLVE {
        bigint id PK
        UUID problem_id FK
        string return_type
        jsonb arguments
        jsonb tests
    }
    SUBMISSIONS {
        UUID id PK
        UUID task_id FK
        UUID user_id FK
        text code
        string language
        string status
        timestamp created_at
    }
    TASK_RESULTS {
        bigint id PK
        UUID submission_id FK
        UUID user_id FK
        string status
        int passed_tests
        int total_tests
        bigint memory_used_kb
        bigint execution_time_ms
        bigint ai_analysis_id FK
        timestamp created_at
    }
    AI_ANALYSIS {
        bigint id PK
        bigint task_result_id FK
        int code_quality_score
        string complexity
        jsonb issues
        jsonb recommendations
        text explanation
        string model_version
        timestamp created_at
    }
